--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Our main goal is to promote the activities of writing and reading. By providing the opportunity to have their manuscripts published professionally we are motivating inexperienced, first-time, amateur writers to finally take the decisive step to write and have their manuscripts read by other people. We understand that writing a book is a complex and arduous process. By providing help, editing services, constructive feedback, and a platform from where to spread the writer’s work, we hope to incentivise the beautiful art of writing. By inviting people to write we are also expanding the act of reading; in order to write you have to read. Good writers are normally excellent and passionate readers. These two acts complement each other in a way that increasing one should also lead to an increase in the other."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/site-logo-white-bg.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
