--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
       // This script should be placed at the root of your repository (or `dist/` folder in some cases).
 
       var pathSegmentsToKeep = 1;
-      var projectName = 'stwWebFrontend';
+      var projectName = 'application';
 
       var l = window.location;
       
